# inferd

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DECISIONS.md  LICENSE  README.md  plan.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.codex/: hooks.json
.cursor/: hooks.json
backends/mlx/: README.md  __init__.py  backend.py  cache.py  loader.py  pyproject.toml  runner.py  serve.py  stub.py
backends/mlx/tests/: test_batched_equiv.py  test_bench_runner.py  test_runner.py  test_seam.py
bench/: __init__.py  batched_equiv.py  correctness.py  harness.py  metrics.py  model_loader.py  paged_equiv.py  pair_configs.py  phase14.py  phase14_microgate.py  report.md  run_all.py  workload.py
bench/results/: correctness_summary.json  phase17_variance.json
bench/results/20260626T123109Z_hf_Qwen3.5-9B/: result.json
bench/results/20260626T123541Z_hf_Qwen3.5-9B/: result.json
bench/results/20260626T123704Z_vllm_deferred/: result.json
bench/results/20260627T123024Z_spec_stock/: result.json
bench/results/20260627T123746Z_spec_stock/: result.json
bench/results/20260627T133746Z_spec_distilled/: result.json
bench/results/20260627T144355Z_paged_cache/: result.json
bench/results/20260627T145545Z_paged_cache/: result.json
bench/results/20260628T034628Z_batched_9b/: result.json
bench/results/20260628T034812Z_batched_9b/: result.json
bench/results/20260628T054206Z_batched_9b/: result.json
bench/results/20260628T084245Z_hf_Qwen3.5-9B/: result.json
bench/results/20260628T092832Z_batched_9b/: result.json
bench/results/20260628T094357Z_spec_stock/: result.json
bench/results/20260628T095814Z_spec_distilled/: result.json
bench/results/20260628T103708Z_batched_9b/: result.json
bench/results/20260628T103716Z_batched_9b/: result.json
bench/results/20260628T103724Z_batched_9b/: result.json
bench/results/20260628T103733Z_batched_9b/: result.json
bench/results/20260628T103745Z_batched_9b/: result.json
bench/results/20260628T103801Z_batched_9b/: result.json
bench/results/20260628T103801Z_batched_9b_matched/: result.json
bench/results/20260628T104330Z_fp8_9b_hero/: result.json
bench/results/20260628T104743Z_fp8_9b_hero/: result.json
bench/runners/: __init__.py  batched.py  hf.py  mlx.py  paged.py  spec.py  vllm.py
bench/vllm/: pyproject.toml
core/: __init__.py  batched_cache.py  model_runner.py  paged_attn.py  paged_attn_interface.py  paged_cache.py  qwen35_patch.py  scheduler.py  spec_decode.py  speculation.py
dashboard/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
dashboard/scripts/: snapshot-bench.mjs  snapshot-selection.mjs  snapshot-selection.test.mjs
dashboard/src/: App.tsx  main.tsx  theme.css
dashboard/src/components/: AppShell.tsx  (+15 more)
docs/: ENVIRONMENT.md  PRE_RELEASE.md  demo.md
finetune/: __init__.py  data.py  distill_draft.py  eval_golden.py  export.py  golden_set.jsonl  prepare_dataset.py  train_qlora.py
finetune/configs/: qwen3_5_0_8b_distill.toml  qwen3_5_9b.toml  qwen3_6_27b.toml
inferd/: __init__.py  env.py
plans/: 01_ENVIRONMENT_WSL2_CUDA.md  03_FINE_TUNING_QLORA.md  10_FP8_27B_HERO_DEMO.md
plans/assets/: inferd-dashboard-design.html
plans/future/: 00_FUTURE_ROADMAP.md  12_MLX_APPLE_SILICON_PORT.md  13_PERSISTENT_PAGED_RUNTIME_CACHE.md  14_FULL_ATTENTION_SPEC_DECODE.md  15_TRITON_PAGED_ATTENTION_KERNEL.md  16_BATCHED_SPECULATIVE_DECODING.md  17_VLLM_CEILING_BLACKWELL.md
plans/shipped/: 00_MASTER_ORCHESTRATION.md  02_BASELINE_MEASUREMENT_HARNESS.md  04_SPECULATIVE_DECODING.md  05_PAGED_KV_CACHE.md  06_CONTINUOUS_BATCHING.md  07_FASTAPI_SERVING.md  08_DASHBOARD_IMPLEMENTATION_PLAN.md  08_REACT_DASHBOARD_FRONTEND.md  09_BENCHMARKS_CORRECTNESS_REPORTING.md  11_DOCS_DECISIONS_README.md  14_FULL_ATTENTION_SPEC_DECODE.md
scripts/: hero_fp8.py  smoke_load.py
serve/: __init__.py  app.py  engine.py  schemas.py
tests/: test_batched_cache.py  test_paged_equiv.py  test_phase14.py  test_run_all_cohort.py  test_scheduler.py  test_serve.py  test_vllm_runner.py
(+33 files in other folders)
