[project]
name = "inferd"
version = "0.1.0"
description = "Local LLM inference stack: QLoRA fine-tune → speculative decoding → paged KV-cache → continuous batching, served via FastAPI. Runs fully local on RTX 5090."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "flash-linear-attention>=0.5.1",
    "huggingface-hub>=1.21.0",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "triton>=3.6.0",
    "unsloth>=2026.3.11",
]
