[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferd"
version = "0.1.0"
description = "Local LLM inference stack: QLoRA fine-tune → speculative decoding → paged KV-cache → continuous batching, served via FastAPI. Runs fully local on RTX 5090."
readme = "README.md"
requires-python = ">=3.13.14,<3.14"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "causal-conv1d>=1.6.1",
    "flash-linear-attention>=0.5.1",
    "huggingface-hub>=1.21.0",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "triton>=3.6.0",
    "unsloth>=2026.3.11",
]

[tool.hatch.build.targets.wheel]
packages = ["inferd"]

# PyPI ships causal-conv1d as sdist only (needs nvcc to build from source).
# Point uv at the prebuilt Blackwell/cu13 wheel from the upstream release.
# OFFLINE NOTE: this URL must be reachable during initial `uv sync` (one-time
# setup window). After that, uv caches the wheel locally and `uv sync --offline`
# works on the same machine. A fresh clone on a fully air-gapped machine would
# need the wheel placed in a local wheelhouse; see docs/ENVIRONMENT.md.
[tool.uv.sources]
causal-conv1d = { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.2/causal_conv1d-1.6.1%2Bcu13torch2.10cxx11abiTRUE-cp313-cp313-linux_x86_64.whl" }
