[project]
name = "inferd-mlx"
version = "0.1.0"
description = "Standalone Apple Silicon runtime for inferd"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.116.1",
    "mlx==0.31.2",
    "mlx-lm==0.31.3",
    "numpy==2.3.2",
    "pytest==8.4.1",
    "tokenizers==0.22.0",
    "torch==2.11.0",
    "transformers==5.3.0",
    "uvicorn==0.35.0",
]

[tool.uv]
package = false

# This project owns its complete portable runtime. Resolve it on Apple Silicon
# with `uv lock --project backends/mlx`; never merge its lock into the CUDA env.
